tests/expectations/compiler/constructor/constructor_without_async_fail.out
Error [EPAR0370005]: expected '(', '@', 'async', 'function', 'inline', 'script', 'transition' -- found 'constructor'
    --> compiler-test:5:5
     |
   5 |     constructor() {
     |     ^^^^^^^^^^^
